user/iamvs-vienna/hostenv/iptables
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [37:2180]
:OUTPUT ACCEPT [37:2180]
-A PREROUTING -p tcp -m tcp --dport 80 -d 192.168.1.250 -j DNAT --to-destination :7777
-A PREROUTING -p tcp -m tcp --dport 443 -d 192.168.1.250 -j DNAT --to-destination :4443
-A OUTPUT -p tcp -m tcp --dport 80 -d 192.168.1.250 -j DNAT --to-destination :7777
-A OUTPUT -p tcp -m tcp --dport 443 -d 192.168.1.250 -j DNAT --to-destination :4443
-A PREROUTING -p tcp -m tcp --dport 80 -d 192.168.168.250 -j DNAT --to-destination :7777
-A PREROUTING -p tcp -m tcp --dport 443 -d 192.168.168.250 -j DNAT --to-destination :4443
-A OUTPUT -p tcp -m tcp --dport 80 -d 192.168.168.250 -j DNAT --to-destination :7777
-A OUTPUT -p tcp -m tcp --dport 443 -d 192.168.168.250 -j DNAT --to-destination :4443
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1521 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1389 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1636 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4444 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8989 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1388 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7777 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7778 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7001 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7101 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8001 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 14000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7302 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7311 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5575 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6700 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6701 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
